Bug 1611520 - gcc-10: Include <cstddef> in FunctionTypeTraits.h r=gerald

Differential Revision: https://phabricator.services.mozilla.com/D61014